--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
                 <input type="text" placeholder="enter city name"spellcheck="false">
                 <button><img src="src/search.png"></button>
             </div>
+            <div class="error">
+                <p>Invalid City Name</p>
+            </div>
             <div class="weather">
                 <img src="src/rain.png" class="weather-icon">
                 <h1 class="temp">22°F</h1>
