--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
             </div>
             <div class="weather">
                 <img src="src/rain.png" class="weather-icon">
-                <h1 class="temp">22°F</h1>
-                <h2 class="city">New York</h2>
+                <h1 class="temp">00°F</h1>
+                <h2 class="city">City Name</h2>
+                <p class="feels-like">Feels like</p>
                 <div class="details">
                     <div class="col">
                         <img src="src/humidity.png">
                         <div>
-                            <p class="humidity">50%</p>
+                            <p class="humidity">100%</p>
                             <p>Humidity</p>
                         </div>
                     </div>
