--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weather App</title>
         <link rel="stylesheet" href="src/styles.css">
     </head>
     <body>
+        <!-- Container -->
         <div class="card">
+            <!-- Search Bar -->
             <div class="search">
                 <input type="text" placeholder="enter city name"spellcheck="false">
                 <button><img src="src/search.png"></button>
             </div>
+            <!-- Error Container -->
             <div class="error">
                 <p>Invalid City Name</p>
             </div>
+            <!-- Weather Data Container -->
             <div class="weather">
                 <img src="src/rain.png" class="weather-icon">
                 <h1 class="temp">00°F</h1>
@@ -37,6 +41,7 @@
                 </div>
             </div>
         </div>
+        <!-- Scripts -->
         <script src="src/main.js">checkWeather()</script>
     </body>
 </html>
